--- a/package.json
+++ b/package.json
@@ -11,8 +11,14 @@
   "bugs": {
     "url": "https://github.com/webhook/webhook-generate/issues"
   },
+  "browser": {},
   "scripts": {
-    "start": "wh serve"
+    "start": "wh serve",
+    "build": "wh build",
+    "deploy": "rm-deploy --prefix=edu",
+    "wh-deploy": "rm-deploy --bucket=master",
+    "init-webhook": "wh init edu-proto-hook",
+    "wh-update": "wh update"
   },
   "homepage": "https://github.com/webhook/webhook-generate",
   "dependencies": {
@@ -25,22 +31,27 @@
     "firebase": "1.0.2",
     "glob": "~3.2.8",
     "grunt": "~0.4.2",
-    "grunt-autoprefixer": "^2.2.0",
-    "grunt-browserify": "^3.6.0",
+    "grunt-autoprefixer": "^3.0.3",
+    "grunt-browserify": "^3.8.0",
     "grunt-concurrent": "~0.4.2",
     "grunt-connect-proxy": "~0.2",
     "grunt-contrib-concat": "~0.3.0",
     "grunt-contrib-connect": "~0.9.0",
     "grunt-contrib-cssmin": "~0.9.0",
-    "grunt-contrib-jshint": "^0.11.1",
+    "grunt-contrib-jshint": "^0.11.2",
     "grunt-contrib-sass": "^0.9.2",
     "grunt-contrib-uglify": "~0.4.0",
     "grunt-open": "~0.2.2",
-    "grunt-postcss": "^0.3.0",
+    "grunt-postcss": "^0.5.4",
     "grunt-rev": "~0.1.0",
     "grunt-simple-watch": "~0.1.2",
     "grunt-usemin": "~2.0.2",
+    "imagesloaded": "^3.1.8",
+    "isotope-layout": "^2.2.1",
+    "jquery": "^2.1.4",
+    "jquery-bridget": "^1.1.0",
     "lodash": "~2.4.1",
+    "lost": "^6.5.0",
     "marked": "~0.3.1",
     "mkdirp": "~0.3.5",
     "moment": "~2.8.1",
@@ -50,8 +61,11 @@
     "swig": "~1.4.1",
     "tiny-lr": "~0.1.0",
     "uslug": "~1.0.3",
-    "wh": "^1.0.46",
     "win-spawn": "~2.0.0",
-    "wrench": "~1.5.4"
+    "wrench": "~1.5.4",
+    "ws": "~0.4.31"
+  },
+  "devDependencies": {
+    "connect-header": "0.0.5"
   }
 }
