--- a/package.json
+++ b/package.json
@@ -25,11 +25,11 @@
     "MD5": "~1.2.1",
     "adm-zip": "~0.4.3",
     "async": "~0.2.10",
-    "cheerio": "~0.18.0",
+    "cheerio": "^1.0.0-rc.2",
     "colors": "~0.6.2",
     "connect-header": "0.0.5",
-    "firebase": "1.0.2",
-    "glob": "~7.1.1",
+    "firebase": "^5.5.8",
+    "glob": "~7.1.2",
     "grunt": "~0.4.5",
     "grunt-autoprefixer": "^3.0.4",
     "grunt-browserify": "^5.0.0",
@@ -50,7 +50,7 @@
     "isotope-layout": "^2.2.1",
     "jquery": "^3.3.1",
     "jquery-bridget": "^1.1.0",
-    "lodash": "~2.4.1",
+    "lodash": "^4.17.5",
     "marked": "~0.3.1",
     "mkdirp": "~0.3.5",
     "moment": "~2.21.0",
@@ -64,17 +64,22 @@
     "win-spawn": "~2.0.0",
     "wrench": "~1.5.4",
     "ws": "~0.4.31",
-    "grunt-sass": "^2.0.0",
+    "grunt-sass": "^2.1.0",
     "mississippi": "~1.3.0",
     "node-bourbon": "^4.2.3",
     "node-neat": "^1.7.2",
     "node-sass": "^4.5.2",
     "picturefill": "^2.3.1",
-    "touch": "^1.0.0"
+    "touch": "^1.0.0",
+    "moment-timezone": "^0.5.14",
+    "slugify": "^1.3.3"
   },
   "devDependencies": {
     "connect-header": "0.0.5",
     "grunt-cli": "^1.2.0",
-    "rm-webhook": "^1.1.1"
+    "rm-webhook": "^2.0.1"
+  },
+  "risd.systems": {
+    "generate": "2.2.10"
   }
 }
