--- a/package.json
+++ b/package.json
@@ -13,12 +13,13 @@
   },
   "browser": {},
   "scripts": {
-    "start": "rm-wh serve",
+    "start": "npm run develop",
     "build": "grunt build",
     "deploy": "rm-wh deploy",
     "build-page": "grunt build-page",
     "build-pages": "grunt build-pages",
-    "build-template": "grunt build-template"
+    "build-template": "grunt build-template",
+    "develop": "rm-wh serve"
   },
   "homepage": "https://github.com/webhook/webhook-generate",
   "dependencies": {
@@ -32,7 +33,7 @@
     "glob": "~7.1.2",
     "grunt": "~0.4.5",
     "grunt-autoprefixer": "^3.0.4",
-    "grunt-browserify": "^5.0.0",
+    "grunt-browserify": "^5.3.0",
     "grunt-concurrent": "~0.4.3",
     "grunt-connect-proxy": "~0.2",
     "grunt-contrib-concat": "^1.0.1",
@@ -50,7 +51,7 @@
     "isotope-layout": "^2.2.1",
     "jquery": "^3.3.1",
     "jquery-bridget": "^1.1.0",
-    "lodash": "^4.17.5",
+    "lodash": "^2.4.2",
     "marked": "~0.3.1",
     "mkdirp": "~0.3.5",
     "moment": "~2.21.0",
@@ -72,7 +73,10 @@
     "picturefill": "^2.3.1",
     "touch": "^1.0.0",
     "moment-timezone": "^0.5.14",
-    "slugify": "^1.3.3"
+    "slugify": "^1.3.3",
+    "@babel/core": "^7.2.2",
+    "@babel/preset-env": "^7.2.0",
+    "babelify": "^10.0.0"
   },
   "devDependencies": {
     "connect-header": "0.0.5",
@@ -80,6 +84,6 @@
     "rm-webhook": "^2.0.5"
   },
   "risd.systems": {
-    "generate": "2.2.17"
+    "generate": "2.3.2"
   }
 }
