--- a/package.json
+++ b/package.json
@@ -23,9 +23,12 @@
   },
   "homepage": "https://github.com/webhook/webhook-generate",
   "dependencies": {
+    "@babel/core": "^7.2.2",
+    "@babel/preset-env": "^7.2.0",
     "MD5": "~1.2.1",
     "adm-zip": "~0.4.3",
     "async": "~0.2.10",
+    "babelify": "^10.0.0",
     "cheerio": "^1.0.0-rc.2",
     "colors": "~0.6.2",
     "connect-header": "0.0.5",
@@ -45,6 +48,7 @@
     "grunt-open": "~0.2.2",
     "grunt-postcss": "^0.5.4",
     "grunt-rev": "~0.1.0",
+    "grunt-sass": "^2.1.0",
     "grunt-simple-watch": "~0.1.2",
     "grunt-usemin": "~2.0.2",
     "imagesloaded": "^3.1.8",
@@ -53,30 +57,26 @@
     "jquery-bridget": "^1.1.0",
     "lodash": "^2.4.2",
     "marked": "~0.3.1",
+    "mississippi": "~1.3.0",
     "mkdirp": "~0.3.5",
     "moment": "~2.21.0",
-    "nodejs-websocket": "~1.2.0",
-    "packery": "^1.4.3",
-    "proxy-middleware": "~0.5.0",
-    "request": "~2.31.0",
-    "swig": "~1.4.2",
-    "tiny-lr": "~0.1.0",
-    "uslug": "~1.0.3",
-    "win-spawn": "~2.0.0",
-    "wrench": "~1.5.4",
-    "ws": "~0.4.31",
-    "grunt-sass": "^2.1.0",
-    "mississippi": "~1.3.0",
+    "moment-timezone": "^0.5.14",
     "node-bourbon": "^4.2.3",
     "node-neat": "^1.7.2",
     "node-sass": "^4.5.2",
+    "nodejs-websocket": "~1.2.0",
+    "packery": "^1.4.3",
     "picturefill": "^2.3.1",
-    "touch": "^1.0.0",
-    "moment-timezone": "^0.5.14",
+    "proxy-middleware": "~0.5.0",
+    "request": "~2.31.0",
     "slugify": "^1.3.3",
-    "@babel/core": "^7.2.2",
-    "@babel/preset-env": "^7.2.0",
-    "babelify": "^10.0.0"
+    "swig": "~1.4.2",
+    "tiny-lr": "~0.1.0",
+    "touch": "^1.0.0",
+    "uslug": "~1.0.3",
+    "win-spawn": "~2.0.0",
+    "wrench": "~1.5.4",
+    "ws": "~0.4.31"
   },
   "devDependencies": {
     "connect-header": "0.0.5",
